added privacy policy

--- a/Runbuddy.html
+++ b/Runbuddy.html
@@ -156,6 +156,7 @@
     </p>
   </div>
 </article>
+<!-- second trainer bio -->
 <article class="trainer">
   <div class="trainer-bio text-right">
     <h3>Joanna Gill</h3>
@@ -167,7 +168,6 @@
   </div>
   <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
 </article>
-
 
 <h2 class="section-title primary-border">
   Meet the Trainers
@@ -183,13 +183,16 @@
     <h3>Run Buddy</h3>
     <p>
       Any questions or concerns before signing up?
-      <br />
+      <br>
       Let us know and we'll be happy to talk to you!
     </p>
     <address>
-      55 Main Street <br/>
-      Some Town, Ca <br/>
-      12345<br />
+      55 Main Street 
+      <br>
+      Some Town, Ca 
+      <br>
+      12345
+      <br>
       P: 555.RUN.BUDZ (555.786.2839)<br/>
       E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
     </address>
